<resources>
    <string name="app_name">Idril</string>
    <string name="shop">my favourite shop</string>
    <string name="Email"> Email</string>
    <string name="Password"> Password</string>
    <string name="Confirm_password"> Confirm password again</string>
    <string name="description_hanger">hanger</string>
    <string name="description_idril">Idril</string>
    <string name="login">Login</string>
    <string name="Sign_up">Sign up</string>
    <string name="Registration">Register</string>
    <string name="Name_user">Nickname</string>
    <string name="Name_category">Name_category</string>
    <string name="Profile">Профиль</string>
    <string name="userName">Имя</string>
    <string name="enter">Применить</string>
    <string name="profilename">ProfileName</string>
    <string name="ours_brands">Наши бренды</string>
    <string name="Search">Поиск</string>
    <string name="brandname">Brandname</string>
    <string name="Reviews">Отзывы</string>
    <string name="error">Внимание, ошибка!</string>
    <string name="error_connect">Ошибка соединения!</string>
    <string name="Reload">Обновить</string>
</resources>