<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_shade">

    <ImageView
        android:id="@+id/hanger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="20sp"
        android:src="@drawable/hanger"
        android:contentDescription="@string/description_hanger"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hanger"
        android:layout_marginTop="5dp"
        android:letterSpacing="0.05"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="90sp"
        tools:targetApi="lollipop" />

    <View
        android:id="@+id/Line"
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:layout_below="@+id/name"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="-14dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Line"
        android:layout_marginTop="-2dp"
        android:text="@string/shop"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="25sp" />
</RelativeLayout>
